tests/ui/rfcs/rfc-2632-const-trait-impl/generic-bound.stderr
error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/generic-bound.rs:25:5
   |
LL |     arg + arg
   |     ^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $DIR/generic-bound.rs:16:1
   |
LL | impl<T> const std::ops::Add for S<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
